--- a/src/app/user-form/user-form.component.scss
+++ b/src/app/user-form/user-form.component.scss
@@ -7,6 +7,7 @@ table {
     word-wrap: break-word;
     text-align: center;
     border: solid 1px #dddddd;
+    padding: 2%;
   }
 }
 .row__container {
