--- a/src/app/user-form/user-form.component.html
+++ b/src/app/user-form/user-form.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <div class="row__container__button">
   <button mat-raised-button color="primary" (click)="addUser()">
     Nuevo Usuario
@@ -127,13 +128,15 @@
 
 <!-- Repositories list -->
 <div *ngIf="showRepositories" class="row__container repo__list">
-  <mat-form-field>
-    <input
-      matInput
-      (keyup)="applyFilter($event.target.value)"
-      placeholder="Filter"
-    />
-  </mat-form-field>
+  <div class="row__list ">
+    <mat-form-field>
+      <input
+        matInput
+        (keyup)="applyFilter($event.target.value)"
+        placeholder="Filter"
+      />
+    </mat-form-field>
+  </div>
 
   <div class="mat-elevation-z8">
     <table mat-table [dataSource]="dataSource" matSort>
@@ -161,7 +164,7 @@
       <ng-container matColumnDef="urlGit">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Url Github</th>
         <td mat-cell *matCellDef="let row">
-          <a href="{{ row.html_url }}" target="_blank"> {{ row.html_url }} </a>
+          <a href="{{ row.html_url }}" target="_blank"> Ver Repo </a>
         </td>
       </ng-container>
 
@@ -180,3 +183,4 @@
     <mat-paginator [pageSizeOptions]="[5, 10]"></mat-paginator>
   </div>
 </div>
+<app-footer></app-footer>
